--- a/cas-management-webapp/src/main/resources/templates/fragments/footer.html
+++ b/cas-management-webapp/src/main/resources/templates/fragments/footer.html
@@ -17,7 +17,7 @@
             <div class="copyright">
                 <p>
                     <span th:utext="#{footer.copyright}" />
-                    <span th:utext="#{footer.poweredBy(${T(org.apereo.cas.CasVersion).getVersion()})}" />
+                    <span th:utext="#{footer.poweredBy(${T(org.apereo.cas.util.CasVersion).getVersion()})}" />
                 </p>
             </div>
         </div>
