--- a/cas-server-webapp/src/main/resources/templates/fragments/footer.html
+++ b/cas-server-webapp/src/main/resources/templates/fragments/footer.html
@@ -3,8 +3,8 @@
         <p th:utext="#{copyright}"></p>
         <p>Powered by <a href="http://www.apereo.org/cas">
             Apereo Central Authentication Service
-            <span th:text="${T(org.apereo.cas.CasVersion).getVersion()}"></span>
-            <span th:text="${T(org.apereo.cas.CasVersion).getDateTime()}"></span> </a>
+            <span th:text="${T(org.apereo.cas.util.CasVersion).getVersion()}"></span>
+            <span th:text="${T(org.apereo.cas.util.CasVersion).getDateTime()}"></span> </a>
         </p>
     </div>
 </footer>
