--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,70 +26,116 @@
 </head>
 
 <body>
-<!-- HEADER -->
-<header>
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-4 col-md-2">
-                <a href="{{ relative }}index.html">
-                    <img class="undecorated" src="{{ relative }}images/cas_logo.png"/>
-                </a>
+<div class="wrapper">
+    <div class="box">
+        <!-- HEADER -->
+        <header>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-4 col-md-2">
+                        <a href="{{ relative }}index.html">
+                            <img class="undecorated" src="{{ relative }}images/cas_logo.png"/>
+                        </a>
+                    </div>
+                    <div class="col-xs-8 col-md-6">
+                        <h1>Single Sign-On for the Web</h1>
+                    </div>
+                    <div class="hidden-sm-down col-md-4">
+                        <a id="forkme_banner" href="https://github.com/apereo/cas">View on GitHub</a>
+                    </div>
+                </div>
             </div>
-            <div class="col-xs-8 col-md-6">
-                <h1>Single Sign-On for the Web</h1>
+        </header>
+
+
+        <!-- NAVBAR -->
+        {% include navbar.html %}
+
+
+        <div class="row row-offcanvas row-offcanvas-right">
+            <div class="column col-md-10 col-sm-9 col-xs-11" id="main">
+                <section id="cas-docs-container" class="container cas-docs-container">
+                    <div class="row">
+                        <!-- MAIN CONTENT -->
+                        <!--<div class="col-xs-12" role="main">-->
+                        <div id="dev-doc-info" class="alert alert-info"><strong>Work in progress</strong>
+                            <p>You are viewing the development documentation for the CAS server. <strong>The
+                                functionality presented
+                                here is not officially released yet and may be unstable</strong>.
+                                This is a work in progress and will be continually updated as development makes
+                                progress. To view
+                                the documentation for a specific CAS server version, please <a
+                                        href="/cas/Older-Versions.html">choose
+                                    an appropriate version.</a></p>
+                        </div>
+
+                        <span id="toolbarIcons"></span>
+                        {{ content }}
+                        <!--</div>-->
+
+                        <!-- PAGE TABLE OF CONTENTS -->
+                        <!--
+                                        <div class="hidden-xs-down col-md-3" role="complementary">
+                                            <nav id="tableOfContents" class="cas-docs-sidebar hidden-print">
+                                                <h4>Table of Contents</h4>
+                                                <ul class="nav cas-docs-sidenav"></ul>
+                                            </nav>
+                                        </div>
+                        -->
+                    </div>
+                </section>
             </div>
-            <div class="hidden-sm-down col-md-4">
-                <a id="forkme_banner" href="https://github.com/apereo/cas">View on GitHub</a>
+
+            <!-- sidebar -->
+            <div class="column col-md-2 col-sm-3 col-xs-1 sidebar-offcanvas" id="sidebar">
+                <ul class="nav hidden-md-up">
+                    <li><a href="#" data-toggle="offcanvas" class="visible-xs text-center"><i
+                            class="fa fa-chevron-left"></i></a></li>
+                </ul>
+
+                <ul class="nav hidden-sm-down" id="lg-menu">
+                    <li id="tableOfContents" class="active">
+                        <a data-toggle="collapse" href="#sidebarTableofContents" data-parent="#lg-menu"
+                           aria-expanded="true" class="collapsed">
+                            <i class="fa fa-list"></i> Table of Contents
+                            <i class="expand"></i>
+                        </a>
+                        <ul class="collapse nav" id="sidebarTableofContents" aria-expanded="false"
+                            style="height: 0px;"></ul>
+                    </li>
+                    <li id="sidebartoc">
+                        <a data-toggle="collapse"
+                           href="#sidebarTopics"
+                           data-parent="#lg-menu"
+                           aria-expanded="false"
+                           class="collapsed">
+                            <i class="fa fa-list-alt"></i> Topics
+                            <i class="expand"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </div>
-</header>
 
 
-<!-- NAVBAR -->
-{% include navbar.html %}
+        <!-- SIDEBAR -->
+        <!--
+        <div id="sidebar_wrap" class="outer">
+            <div id="sidebar_content" class="inner">
+                <span id="sidebartoc"></span>
+            </div>
+        </div>
+        -->
 
-<!-- SIDEBAR -->
-<!--
-<div id="sidebar_wrap" class="outer">
-    <div id="sidebar_content" class="inner">
-        <span id="sidebartoc"></span>
+
+        <!-- FOOTER  -->
+        <footer>
+            <div class="container">
+                CAS is supported by the <a href="http://www.apereo.org/">Apereo Foundation</a>.
+            </div>
+        </footer>
     </div>
 </div>
--->
-<section id="cas-docs-container" class="container cas-docs-container">
-    <div class="row">
-        <!-- MAIN CONTENT -->
-        <div class="col-xs-12 col-md-9" role="main">
-            <div id="dev-doc-info" class="alert alert-info"><strong>Work in progress</strong>
-                <p>You are viewing the development documentation for the CAS server. <strong>The functionality presented
-                    here is not officially released yet and may be unstable</strong>.
-                    This is a work in progress and will be continually updated as development makes progress. To view
-                    the documentation for a specific CAS server version, please <a href="/cas/Older-Versions.html">choose
-                        an appropriate version.</a></p>
-            </div>
-
-            <span id="toolbarIcons"></span>
-            {{ content }}
-        </div>
-
-        <!-- PAGE TABLE OF CONTENTS -->
-        <div class="hidden-xs-down col-md-3" role="complementary">
-            <nav id="tableOfContents" class="cas-docs-sidebar hidden-print">
-                <h4>Table of Contents</h4>
-                <ul class="nav cas-docs-sidenav"></ul>
-            </nav>
-        </div>
-    </div>
-</section>
-
-<!-- FOOTER  -->
-<footer>
-    <div class="container">
-        CAS is supported by the <a href="http://www.apereo.org/">Apereo Foundation</a>.
-    </div>
-</footer>
-
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/tether/1.3.2/js/tether.min.js"></script>
