--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,19 +1,14 @@
-<nav class="navbar navbar-static-top navbar-cas" role="navigation">
-    <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#collapsing-navbar">
-        &#9776;
-    </button>
+<nav class="navbar navbar-static-top navbar-cas hidden-sm-down" role="navigation">
     <div class="container">
-        <div class="collapse navbar-toggleable-xs" id="collapsing-navbar">
-            <ul class="nav navbar-nav">
-                <li class="nav-item active"><a href="{{ relative }}index.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="https://github.com/apereo/cas/releases" class="nav-link">Downloads</a>
-                </li>
-                <li class="nav-item"><a href="https://www.google.com/cse/publicurl?cx=017040929083740828958:sqr2hwvrxmg"
-                                        class="nav-link">Search</a></li>
-                <li class="nav-item"><a href="{{ relative }}Support.html" class="nav-link">Support</a></li>
-                <li class="nav-item"><a href="{{ relative }}Mailing-Lists.html" class="nav-link">Mailing Lists</a></li>
-                <li class="nav-item"><a href="{{ relative }}Older-Versions.html" class="nav-link">Versions</a></li>
-            </ul>
-        </div>
+        <ul class="nav navbar-nav">
+            <li class="nav-item active"><a href="{{ relative }}index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="https://github.com/apereo/cas/releases" class="nav-link">Downloads</a>
+            </li>
+            <li class="nav-item"><a href="https://www.google.com/cse/publicurl?cx=017040929083740828958:sqr2hwvrxmg"
+                                    class="nav-link">Search</a></li>
+            <li class="nav-item"><a href="{{ relative }}Support.html" class="nav-link">Support</a></li>
+            <li class="nav-item"><a href="{{ relative }}Mailing-Lists.html" class="nav-link">Mailing Lists</a></li>
+            <li class="nav-item"><a href="{{ relative }}Older-Versions.html" class="nav-link">Versions</a></li>
+        </ul>
     </div>
 </nav>
