--- a/cas-server-webapp/src/main/resources/templates/layout.html
+++ b/cas-server-webapp/src/main/resources/templates/layout.html
@@ -27,8 +27,8 @@
         var trackGeoLocation = /*[[${trackGeoLocation}]]*/ === "true";
 
         var googleAnalyticsTrackingId = /*[[${googleAnalyticsTrackingId}]]*/;
-        
-        if (googleAnalyticsTrackingId != '') {
+
+        if (googleAnalyticsTrackingId != null && googleAnalyticsTrackingId != '') {
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
                     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
