--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,9 +52,9 @@
 
 
         <div class="row row-offcanvas row-offcanvas-right">
-            <div class="column col-md-10 col-sm-9 col-xs-11" id="main">
+            <div class="column col-sm-9 col-xs-11" id="main">
                 <section>
-                    <div id="mobile-nav" class="navbar navbar-cas navbar-static-top hidden-sm-up" role="banner">
+                    <div id="mobile-nav" class="navbar navbar-cas navbar-static-top hidden-md-up" role="banner">
                         <!-- top nav -->
                         <div class="navbar-header clearfix">
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -109,13 +109,13 @@
             </div>
 
             <!-- sidebar -->
-            <div class="column col-md-2 col-sm-3 col-xs-1 sidebar-offcanvas" id="sidebar">
-                <ul class="nav hidden-md-up">
+            <div class="column col-sm-3 col-xs-1 sidebar-offcanvas" id="sidebar">
+                <ul class="nav hidden-sm-up">
                     <li><a href="#" data-toggle="offcanvas" class="visible-xs text-center"><i
                             class="fa fa-chevron-left"></i></a></li>
                 </ul>
 
-                <ul class="nav hidden-sm-down" id="lg-menu">
+                <ul class="nav hidden-xs-down" id="lg-menu">
                     <li id="tableOfContents" class="active">
                         <a data-toggle="collapse" href="#sidebarTableofContents" data-parent="#lg-menu"
                            aria-expanded="true" class="collapsed">
