--- a/cas-server-webapp/src/main/resources/templates/fragments/loginform.html
+++ b/cas-server-webapp/src/main/resources/templates/fragments/loginform.html
@@ -64,7 +64,7 @@
             <input type="hidden" name="_eventId" value="submit"/>
             <input type="hidden" name="geolocation"/>
 
-            <input class="btn-submit btn-block"
+            <input class="btn btn-submit btn-block"
                    name="submit"
                    accesskey="l"
                    th:value="#{screen.welcome.button.login}"
