--- a/cas-server-webapp/src/main/resources/static/sass/components/_footer.scss
+++ b/cas-server-webapp/src/main/resources/static/sass/components/_footer.scss
@@ -1,8 +1,10 @@
 footer {
   padding: 20px;
   color: white;
+
+  a:link, a:visited {
+    color: white;
+  }
+
 }
 
-footer a:link, footer a:visited {
-  color: white;
-}
