--- a/cas-server-webapp/src/main/resources/templates/casLoginView.html
+++ b/cas-server-webapp/src/main/resources/templates/casLoginView.html
@@ -10,6 +10,7 @@
         <div class="row">
             <div id="notices" class="col-sm-12 col-md-6 col-md-push-6">
                 <div th:replace="fragments/insecure"/>
+                <div th:replace="fragments/defaultauthn"/>
                 <div th:replace="fragments/cookies"/>
                 <div th:replace="fragments/serviceui"/>
                 <div th:replace="fragments/cas-resources-list" />
