--- a/cas-server-webapp/src/main/resources/templates/fragments/loginProviders.html
+++ b/cas-server-webapp/src/main/resources/templates/fragments/loginProviders.html
@@ -8,9 +8,15 @@
                    th:classappend="'btn-' + ${entry.type}"
                    th:href="${entry.redirectUrl}"
                    th:inline="text"
-                   th:title="${entry.name}"
-                >
+                   th:title="${entry.name}">
+
                     <span th:case="twitter" class="fa fa-twitter-square"></span>
+                    <span th:case="foursquare" class="fa fa-foursquare"></span>
+                    <span th:case="windowslive" class="fa fa-windows"></span>
+                    <span th:case="yahoo" class="fa fa-yahoo"></span>
+                    <span th:case="google2" class="fa fa-google-plus"></span>
+                    <span th:case="github" class="fa fa-github-alt"></span>
+                    <span th:case="dropbox" class="fa fa-dropbox"></span>
                     <span th:case="facebook" class="fa fa-facebook-square"></span>
                     <span th:case="oidc" class="fa fa-openid"></span>
                     <span th:case="saml2" class="fa fa-lock"></span>
@@ -26,9 +32,15 @@
                class="btn btn-lg btn-social-icon"
                th:classappend="'btn-' + ${entry.type}"
                th:href="${entry.redirectUrl}"
-               th:title="${entry.name}"
-            >
+               th:title="${entry.name}">
+
                 <span th:case="twitter" class="fa fa-twitter-square"></span>
+                <span th:case="foursquare" class="fa fa-foursquare"></span>
+                <span th:case="windowslive" class="fa fa-windows"></span>
+                <span th:case="yahoo" class="fa fa-yahoo"></span>
+                <span th:case="google2" class="fa fa-google-plus"></span>
+                <span th:case="github" class="fa fa-github-alt"></span>
+                <span th:case="dropbox" class="fa fa-dropbox"></span>
                 <span th:case="facebook" class="fa fa-facebook-square"></span>
                 <span th:case="oidc" class="fa fa-openid"></span>
                 <span th:case="saml2" class="fa fa-lock"></span>
