--- a/cas-management-webapp/src/main/resources/templates/fragments/serviceform/accessstrategy.html
+++ b/cas-management-webapp/src/main/resources/templates/fragments/serviceform/accessstrategy.html
@@ -103,7 +103,7 @@ Todo: add field: Rejected Attributes: As a table,
             </label>
             <div class="col-sm-8">
                 <div class="checkbox checkbox-inline">
-                    <input type="checkbox" id="caseInsensitive" ng-model="serviceFormCtrl.serviceData.accessStrategy.caseInsensitive" />
+                    <input type="checkbox" id="caseInsensitive" ng-model="serviceFormCtrl.serviceData.supportAccess.caseInsensitive" />
                 </div>
             </div>
         </div>
@@ -120,16 +120,33 @@ Todo: add field: Rejected Attributes: As a table,
                    th:title="#{services.form.tooltip.sas.selecttype}"></i>
             </label>
             <div class="col-sm-8">
-                <select class="form-control" id="selectType" ng-model="serviceFormCtrl.serviceData.accessStrategy.type">
+                <select class="form-control" id="selectType" ng-model="serviceFormCtrl.serviceData.supportAccess.type">
+                    
                     <option
                         ng-repeat="opt in serviceFormCtrl.selectOptions.selectType"
-                        ng-attr-value="{{ opt.value }}"
-                        ng-selected="serviceFormCtrl.isSelected(opt.value, serviceFormCtrl.serviceData.accessStrategy.type)">{{ opt.name }}</option>
+                        ng-attr-value="{{opt.value}}"
+                        ng-selected="serviceFormCtrl.isSelected(opt.value, serviceFormCtrl.serviceData.supportAccess.type)">{{ opt.name
+                        }}</option>
                 </select>
             </div>
         </div>
 
-        <div id="accessDateTime" ng-show="serviceFormCtrl.serviceData.accessStrategy.type != 'default'">
+        <div class="form-group"  ng-show="serviceFormCtrl.serviceData.supportAccess.type == 'REMOTE'">
+            <label for="unauthorizedRedirectUrl" class="col-sm-4" th:inline="text">
+                [[#{services.form.label.sas.remoteUrl}]]
+                <i class="fa fa-lg fa-question-circle form-tooltip-icon no-float"
+                   data-toggle="tooltip"
+                   data-placement="top"
+                   th:title="#{services.form.tooltip.sas.remoteUrl}"></i>
+            </label>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" id="remoteUrl"
+                       ng-model="serviceFormCtrl.serviceData.supportAccess.url"/>
+            </div>
+        </div>
+        
+        <div id="accessDateTime" 
+             ng-show="serviceFormCtrl.serviceData.supportAccess.type != 'DEFAULT' &amp;&amp; serviceFormCtrl.serviceData.supportAccess.type != 'REMOTE'">
             <div class="form-group">
                 <label for="accessStartingDateInput" class="col-sm-4">
                     <span th:remove="tag" th:text="#{services.form.label.sas.starttime}"/>
@@ -170,8 +187,9 @@ Todo: add field: Rejected Attributes: As a table,
                 </div>
             </div>
         </div>
-
-        <div id="grouperOptions" ng-show="serviceFormCtrl.serviceData.accessStrategy.type == 'grouper'">
+        
+        
+        <div id="grouperOptions" ng-show="serviceFormCtrl.serviceData.supportAccess.type == 'GROUPER'">
             <div class="form-group">
                 <label for="groupField" class="col-sm-4" th:inline="text">
                     [[#{services.form.label.sas.grouper.groupfield}]]
@@ -211,123 +229,3 @@ Todo: add field: Rejected Attributes: As a table,
         });
     </script>
 </div>
-
-<!--
-<div class="panel panel-success">
-    <div class="panel-heading">
-        <div class="panel-title"><span th:remove="tag" th:text="#{services.form.header.sas}"/></div>
-    </div>
-    <div class="panel-body panel-sas-options">
-        <div class="col-sm-12 form-group">
-            <div class="col-sm-6 checkbox">
-                <label class="col-sm-12" for="ssoEnabled">
-                    <input type="checkbox" id="ssoEnabled"
-                           ng-model="serviceFormCtrl.serviceData.supportAccess.ssoEnabled"/>
-                    <span th:remove="tag" th:text="#{services.form.label.sas.ssoEnabled}"/>
-                    <i class="fa fa-lg fa-question-circle form-tooltip-icon no-float"
-                       data-toggle="tooltip"
-                       data-placement="top"
-                       th:title="#{services.form.tooltip.sas.ssoEnabled}"></i>
-                </label>
-            </div>
-            <div class="col-sm-6 checkbox">
-                <label class="col-sm-12" for="sasRequireAll">
-                    <input type="checkbox" id="sasRequireAll"
-                           ng-model="serviceFormCtrl.serviceData.supportAccess.requireAll"/>
-                    <span th:remove="tag" th:text="#{services.form.label.sas.requireAll}"/>
-                    <i class="fa fa-lg fa-question-circle form-tooltip-icon no-float"
-                       data-toggle="tooltip"
-                       data-placement="top"
-                       th:title="#{services.form.tooltip.sas.requireAll}"></i>
-                </label>
-            </div>
-        </div>
-
-        <div class="col-sm-12">
-            <label for="sasRequiredAttr">
-                <span th:remove="tag" th:text="#{services.form.label.sas.requiredAttr}"/>
-                <i class="fa fa-lg fa-question-circle form-tooltip-icon no-float"
-                   data-toggle="tooltip"
-                   data-placement="top"
-                   th:title="#{services.form.tooltip.sas.requiredAttr}"></i>
-            </label>
-            <div class="panel panel-default">
-                <table id="sasMapTable" class="table table-striped table-hover table-responsive table-condensed">
-                    <thead>
-                    <tr>
-                        <th class="col-md-6"><span th:remove="tag"
-                                                   th:text="#{services.form.label.attrRelease.policies.sourceAttribute}"/>
-                        </th>
-                        <th class="col-md-6"><span th:remove="tag"
-                                                   th:text="#{services.form.label.attrRelease.policies.casAttribute}"/>
-                        </th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr ng-repeat="mappedValue in serviceFormCtrl.formData.availableAttributes">
-                        <td class="va-middle">{{ mappedValue }}</td>
-                        <td><textarea class="form-control noresize" rows="2"
-                                      ng-model="serviceFormCtrl.serviceData.supportAccess.requiredAttrStr[ mappedValue ]"></textarea>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
-        <div class='col-sm-12'>
-
-            <span th:remove="tag" th:text="#{services.form.label.sas.starttime}"/>
-            <i class="fa fa-lg fa-question-circle form-tooltip-icon no-float"
-               data-toggle="tooltip"
-               data-placement="top"
-               th:title="#{services.form.tooltip.sas.starttime}"></i>
-
-            <div class='input-group date' id='accessStartingDate'>
-                <input type='text' class="form-control"
-                       id='accessStartingDateInput'
-                       ng-model="serviceFormCtrl.serviceData.supportAccess.startingTime"/>
-                                    <span class="input-group-addon">
-                                        <span class="glyphicon glyphicon-time"></span>
-                                    </span>
-            </div>
-            <br/>
-            <span th:remove="tag" th:text="#{services.form.label.sas.endtime}"/>
-            <i class="fa fa-lg fa-question-circle form-tooltip-icon no-float"
-               data-toggle="tooltip"
-               data-placement="top"
-               th:title="#{services.form.tooltip.sas.endtime}"></i>
-            <div class='input-group date' id='accessEndingDate'>
-                <input type='text' class="form-control"
-                       id='accessEndingDateInput'
-                       ng-model="serviceFormCtrl.serviceData.supportAccess.endingTime"/>
-                                    <span class="input-group-addon">
-                                        <span class="glyphicon glyphicon-time"></span>
-                                    </span>
-            </div>
-
-        </div>
-        <script type="text/javascript">
-            $(function () {
-                $('#accessStartingDate').datetimepicker({
-                    format: "YYYY-MM-DDTHH:mm:ss.SSS",
-                    useCurrent: true
-                });
-                $('#accessEndingDate').datetimepicker({
-                    format: "YYYY-MM-DDTHH:mm:ss.SSS",
-                    useCurrent: true
-                });
-
-                $("#accessStartingDateInput").blur(function () {
-                    $("#accessStartingDateInput").trigger('input')
-                });
-                $("#accessEndingDateInput").blur(function () {
-                    $("#accessEndingDateInput").trigger('input');
-                });
-
-            });
-        </script>
-
-    </div>
-</div>
--->
