--- a/cas-management-webapp/src/main/resources/templates/fragments/serviceform/accessstrategy.html
+++ b/cas-management-webapp/src/main/resources/templates/fragments/serviceform/accessstrategy.html
@@ -103,12 +103,12 @@ Todo: add field: Rejected Attributes: As a table,
             </label>
             <div class="col-sm-8">
                 <div class="checkbox checkbox-inline">
-                    <input type="checkbox" id="caseInsensitive" ng-model="serviceFormCtrl.serviceData.supportAccess.caseInsensitive" />
+                    <input type="checkbox" id="caseInsensitive" ng-model="serviceFormCtrl.serviceData.supportAccess.caseInsensitive"/>
                 </div>
             </div>
         </div>
 
-        <div th:replace="fragments/serviceform/rejectedAttributes" />
+        <div th:replace="fragments/serviceform/rejectedAttributes"/>
 
         <!-- Select Type -->
         <div class="form-group">
@@ -121,17 +121,18 @@ Todo: add field: Rejected Attributes: As a table,
             </label>
             <div class="col-sm-8">
                 <select class="form-control" id="selectType" ng-model="serviceFormCtrl.serviceData.supportAccess.type">
-                    
+
                     <option
-                        ng-repeat="opt in serviceFormCtrl.selectOptions.selectType"
-                        ng-attr-value="{{opt.value}}"
-                        ng-selected="serviceFormCtrl.isSelected(opt.value, serviceFormCtrl.serviceData.supportAccess.type)">{{ opt.name
-                        }}</option>
+                            ng-repeat="opt in serviceFormCtrl.selectOptions.selectType"
+                            ng-attr-value="{{opt.value}}"
+                            ng-selected="serviceFormCtrl.isSelected(opt.value, serviceFormCtrl.serviceData.supportAccess.type)">{{ opt.name
+                        }}
+                    </option>
                 </select>
             </div>
         </div>
 
-        <div class="form-group"  ng-show="serviceFormCtrl.serviceData.supportAccess.type == 'REMOTE'">
+        <div class="form-group" ng-show="serviceFormCtrl.serviceData.supportAccess.type == 'REMOTE'">
             <label for="unauthorizedRedirectUrl" class="col-sm-4" th:inline="text">
                 [[#{services.form.label.sas.remoteUrl}]]
                 <i class="fa fa-lg fa-question-circle form-tooltip-icon no-float"
@@ -143,9 +144,21 @@ Todo: add field: Rejected Attributes: As a table,
                 <input type="text" class="form-control" id="remoteUrl"
                        ng-model="serviceFormCtrl.serviceData.supportAccess.url"/>
             </div>
+
+            <label for="authorizedCodes" class="col-sm-4" th:inline="text">
+                [[#{services.form.label.sas.authorizedCodes}]]
+                <i class="fa fa-lg fa-question-circle form-tooltip-icon no-float"
+                   data-toggle="tooltip"
+                   data-placement="top"
+                   th:title="#{services.form.tooltip.sas.authorizedCodes}"></i>
+            </label>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" id="authorizedCodes"
+                       ng-model="serviceFormCtrl.serviceData.supportAccess.codes"/>
+            </div>
         </div>
-        
-        <div id="accessDateTime" 
+
+        <div id="accessDateTime"
              ng-show="serviceFormCtrl.serviceData.supportAccess.type != 'DEFAULT' &amp;&amp; serviceFormCtrl.serviceData.supportAccess.type != 'REMOTE'">
             <div class="form-group">
                 <label for="accessStartingDateInput" class="col-sm-4">
@@ -187,23 +200,31 @@ Todo: add field: Rejected Attributes: As a table,
                 </div>
             </div>
         </div>
-        
-        
+
+
         <div id="grouperOptions" ng-show="serviceFormCtrl.serviceData.supportAccess.type == 'GROUPER'">
             <div class="form-group">
                 <label for="groupField" class="col-sm-4" th:inline="text">
                     [[#{services.form.label.sas.grouper.groupfield}]]
-                    <!-- Todo: hookup correct tooltip text -->
                     <i class="fa fa-lg fa-question-circle form-tooltip-icon no-float"
                        data-toggle="tooltip"
                        data-placement="top"
                        th:title="#{services.form.tooltip.sas.grouper}"></i>
                 </label>
                 <div class="col-sm-8">
-                    <select class="form-control" id="groupField">
-                        <option ng-repeat="opt in serviceFormCtrl.selectOptions.groupField" ng-attr-value="{{ opt.value }}"
-                                ng-selected="serviceFormCtrl.isSelected(opt.value, serviceFormCtrl.serviceData.attrRelease.groupFieldSelection)">{{ opt.name }}</option>
-                    </select>
+                    <div class="input-group">
+                        <div class="input-group-addon input-group-required" th:title="#{services.form.required}">
+                            <i class="fa fa-exclamation-triangle"></i>
+                        </div>
+                        <select class="form-control" id="groupField" ng-model="serviceFormCtrl.serviceData.supportAccess.groupField">
+                            <option
+                                    ng-repeat="opt in serviceFormCtrl.selectOptions.groupField"
+                                    ng-attr-value="{{ opt.value }}"
+                                    ng-selected="serviceFormCtrl.isSelected(opt.value, serviceFormCtrl.serviceData.supportAccess.groupField)">
+                                {{ opt.name }}
+                            </option>
+                        </select>
+                    </div>
                 </div>
             </div>
         </div>
