--- a/cas-management-webapp/src/main/resources/templates/fragments/serviceform/reqhandlers.html
+++ b/cas-management-webapp/src/main/resources/templates/fragments/serviceform/reqhandlers.html
@@ -7,6 +7,6 @@
            th:title="#{services.form.tooltip.requiredHandlers}"></i>
     </label>
     <div class="col-sm-9">
-        <textarea class="form-control noresize" id="reqHandler" rows="4" ng-model="serviceFormCtrl.serviceData.reqHandlersStr"></textarea>
+        <input class="form-control noresize" id="reqHandler"  ng-model="serviceFormCtrl.serviceData.reqHandlersStr"></input>
     </div>
 </div>
